test/testdata/classes/methods/property_accessors/clashing_method_read_only_error.lox
class Foo {
  get bar() {}
  static bar() {}

  // error: 'bar' has already been declared as a property accessor
  // lint error: 'bar' has already been declared as a property accessor
  bar() {}
}

_ = Foo;
